Add MongoTreeEditor